--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "framer-motion": "^2.9.1",
-    "react": "^16.14.0",
+    "react": "^16.8.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
+    "react-intersection-observer": "^8.29.1",
     "react-kawaii": "^0.16.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
