--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase-tools": "^8.15.1",
     "framer-motion": "^2.9.1",
+    "prettier": "^2.1.2",
     "react": "^16.8.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
